# english-coach-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  english-coach-design.md
data/learning_item_curation/: accepted_meanings.jsonl  delete_candidates.jsonl  review_meanings.jsonl
data/learning_item_curation/meaning_batches/: batch_0001.json  batch_0002.json  (+829 more)
docker/: docker-compose.yml
docs/: CODE_REVIEW_HANDOFF_2026-05-04.md
java-core/: pom.xml
python-agent/: .env.example  pyproject.toml
python-agent/app/: config.py  main.py
python-agent/app/agents/: coach_agent.py  explanation_agent.py  reflection_agent.py
python-agent/app/api/: coach_routes.py  dto.py  explanation_routes.py  harness_routes.py  reflection_routes.py  reminder_routes.py  ui_routes.py
python-agent/app/harness/: recorder.py  replayer.py
python-agent/app/middleware/: tracing.py
python-agent/app/services/: correction_service.py  llm_service.py  reminder_service.py
python-agent/app/static/: index.html
python-agent/tests/: test_coach_agent.py  test_coach_turn_agent.py  test_coach_turn_routes.py  test_correction_service.py  test_explanation_agent.py  test_first_coaching_agent.py  test_llm_service.py  test_reflection_agent.py  test_reminder_service.py  test_static_ui.py  test_ui_route.py
tools/: enrich_examples.py  smoke-api-matrix.sh  smoke-db-check.sh  smoke-learning-flow.sh  test_enrich_examples.py
tools/learning_item_curation/: apply_curation.py  extract_learning_items.py  generate_candidates.py  validate_llm_results.py
tools/smoke-artifacts/: learning-flow-last.json
(+1047 files in other folders)
