[project]
name = "python-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
